[gd_scene load_steps=2 format=3 uid="uid://cplsms2sj4cd3"]

[ext_resource type="Script" path="res://ui/counter_screen.gd" id="1_6adcf"]

[node name="CounterScreen" type="CanvasLayer"]
process_mode = 3
layer = 9
script = ExtResource("1_6adcf")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.229649, 0.0412992, 0.0369432, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -22.0
offset_right = 140.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2

[node name="V" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Message" type="Label" parent="PanelContainer/V"]
layout_mode = 2
text = "[TERRITORY] IS COUNTERATTACKING"

[node name="H" type="HBoxContainer" parent="PanelContainer/V"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="FightButton" type="Button" parent="PanelContainer/V/H"]
layout_mode = 2
text = "FIGHT"

[node name="DesistButton" type="Button" parent="PanelContainer/V/H"]
layout_mode = 2
text = "DESIST"

[connection signal="pressed" from="PanelContainer/V/H/FightButton" to="." method="_on_fight_button_pressed"]
[connection signal="pressed" from="PanelContainer/V/H/DesistButton" to="." method="_on_desist_button_pressed"]
